@@ -21,14 +21,14 @@ all:
 PKG_CONFIG_FILE = @PACKAGE_TARNAME@.pc
 PKG_DIR="$(DESTDIR)$(libdir)/pkgconfig/"
 
-edit = sed -e "s|@prefix\@|$(prefix)|" \
-           -e 's,@exec_prefix\@,$(exec_prefix),g' \
-           -e 's,@libdir\@,$(libdir),g' \
-           -e 's,@includedir\@,$(includedir),g' \
-           -e 's,@datarootdir\@,$(datarootdir),g' \
-           -e 's,@PACKAGE\@,$(PACKAGE),g' \
-           -e 's,@PACKAGE_TARNAME\@,$(PACKAGE_TARNAME),g' \
-           -e 's,@VERSION\@,$(PACKAGE_VERSION),g'
+edit = $(SED) -e "s|@prefix\@|$(prefix)|"			\
+              -e 's,@exec_prefix\@,$(exec_prefix),g'		\
+              -e 's,@libdir\@,$(libdir),g'			\
+              -e 's,@includedir\@,$(includedir),g'		\
+              -e 's,@datarootdir\@,$(datarootdir),g'		\
+              -e 's,@PACKAGE\@,$(PACKAGE),g'			\
+              -e 's,@PACKAGE_TARNAME\@,$(PACKAGE_TARNAME),g'	\
+              -e 's,@VERSION\@,$(PACKAGE_VERSION),g'
 
 @PACKAGE_TARNAME@.pc: $(srcdir)/build-aux/pkg-config.pc.in
 	$(edit) $(srcdir)/build-aux/pkg-config.pc.in >$@
