@@ -1,0 +1,45 @@
+#! /bin/sh
+##########
+# README #
+##########
+#
+# Upload the generated Doxygen documentation to SF web page.
+# Requires ``wput'', ``which'' and basic shell features.
+#
+# To use this script, set the SF_USERNAME environement
+# variable with your SF ID:
+#
+# $ setenv SF_USERNAME=X12345
+# or
+# $ export SF_USERNAME=X12345
+# ...depending on the shell you use.
+#
+# Then launch the script. It will prompt for your password
+# and upload the documentation in a @PACKAGE_TARNAME@ folder.
+
+
+rsync=$(which rsync)
+
+if test "x$rsync" = x; then
+ echo "rsync can not be found. Please add it to your path.";
+ exit 1
+fi
+
+if test "x$SF_USERNAME" = x; then
+ echo -n "SF_USERNAME environment variable not set, "
+ echo "please define it to your SourceForge ID.";
+ exit 2
+fi
+
+echo "Uploading documentation to SourceForge server, please wait.";
+$rsync -avP -e ssh @abs_builddir@/html/ \
+    $SF_USERNAME,roboptim@web.sourceforge.net:htdocs/doc/HEAD/
+ret="$?";
+if test 0 -eq "$ret"; then
+ echo "Done. Exiting";
+ exit 0
+else
+ echo "Upload has failed.";
+fi;
+
+exit $ret
