@@ -1,5 +1,14 @@
 2009-04-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance documentation generation.
+	* Makefile.am: Use configure detected sed.
+	* configure.ac: Search for sed, mkdir, doxygen.
+	* doc/Makefile.am: Use configure detected doxygen.
+	* doc/aist-upload.sh.in: Remove.
+	* doc/sf-upload.sh.in: New.
+
+2009-04-17  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Prepare release 0.1.
 	* AUTHORS: Update authors.
 	* NEWS: Fill NEWS for release 0.1.
